--- a/workflowinput.yaml
+++ b/workflowinput.yaml
@@ -218,12 +218,12 @@ parameterlist:
     - displayname: forceoffline
       paramtype: select
       nf_paramname: forceoffline
-      formvalue: No
+      formvalue: "No"
       options:
-        - value: Yes
-          display: Yes
-        - value: No
-          display: No
+        - value: "Yes"
+          display: "Yes"
+        - value: "No"
+          display: "No"
     
 
     
